Fix agents stopping by forcing MOVE_FORWARD on straight tracks

--- a/Project_Codes/.gitignore
+++ b/Project_Codes/.gitignore
@@ -1,6 +1,9 @@
 # Plots directory
 plots/
 
+# Visualizations directory (GIFs and images)
+visualizations/
+
 # Also consider ignoring other generated files
 tmp/
 *.pyc
